--- a/.github/workflows/aws-workflow.yml
+++ b/.github/workflows/aws-workflow.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [ main ]
 
+env:
+  OPENAI_API_KEY: '${{ secrets.OPENAI_API_KEY }}'
+    
+
 jobs:
   build-and-deploy:
     runs-on: [ ubuntu-latest ]
@@ -27,7 +31,6 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           REPOSITORY: chatbot-app
         run: |
           # Build a docker container and
